--- a/frappe/frappe/public/scss/desk/image_view.scss
+++ b/frappe/frappe/public/scss/desk/image_view.scss
@@ -201,6 +201,18 @@
 			}
 		}
 	}
+	.image-view-container.custom-grid {
+		display: grid;
+		grid-template-columns: repeat(auto-fill, minmax(265px, 1fr));
+		gap: 8px; 
+	}
+
+	@media screen and (min-width: 760px) {
+		.image-view-container.custom-grid {
+			grid-template-columns: repeat(4, 1fr);
+			gap: 8px; 
+		}
+	}
 }
 
 .pswp--svg .pswp__button,
